--- a/src/css/common.css
+++ b/src/css/common.css
@@ -94,6 +94,11 @@ button {
   cursor: pointer;
 }
 
+button:hover:not([disabled]),
+button:focus:not([disabled]) {
+  background-color: #7cb9fb;
+}
+
 #datetime-picker {
   width: 240px;
   height: 40px;
@@ -105,4 +110,47 @@ button {
 button:disabled,
 #datetime-picker:disabled {
   cursor: default;
+}
+
+/* Estilos de la tarea 3 */
+.form input {
+  font-family: 'Orbitron', sans-serif;
+  text-align: center;
+  font-size: 40px;
+  letter-spacing: 2px;
+  width: 200px;
+  height: 100px;
+  display: flex;
+}
+
+.form {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 30px;
+  width: 980px;
+}
+
+.form label {
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+
+  border-radius: 20px;
+
+  width: 300px;
+  height: 190px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  background-color: #fafafa;
+}
+
+.form button {
+  width: 200px;
+  height: 50px;
+  font-size: 18px;
 }
